# basic_python_cookiecutter

{{cookiecutter.package_name}}/: .gitignore  setup.cfg
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py
