[metadata]
name = {{cookiecutter.package_name}}
version = 0.0.1

[options]
packages = find:
package_dir =
    =src
# install_requires =
#   requests
#   jedi>=19.0
#   package_name @ git+https://gitlab.com/<PRIVATE_ORG>/<PRIVATE_REPO>.git@<COMMIT_ID>

# [options.entry_points]
# console_scripts =
#   main = {{cookiecutter.package_name}}:some_func
